--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
-    "lucide-react": "^0.294.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "terser-webpack-plugin": "^5.3.14",
+    "typescript": "^5"
   }
 }
-
-
